--- a/es5/package.json
+++ b/es5/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "material-design-icons": "3.0.1",
-    "material-react-components": "material-react-components",
+    "material-react-components": "next",
     "react": "15.6.1",
     "react-dom": "15.6.1"
   }
